log/build_2021-11-14_23-50-36/client/stderr.log
  File "/home/dave/team/test_ws/install/client/lib/python3.6/site-packages/client/client_node.py", line 36
    future.add_done_callback((t=self.callback_global_param))
                               ^
SyntaxError: invalid syntax

